# gdn-tri-inverse

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prospector.yml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
docker/: Dockerfile  README.md  build_docker.sh  model-configs.json  set_env.sh  sglang-bench-one-batch.py  sglang-client-http-infer-example.py  sglang-eval.md  sglang-server-http-launch.sh  start_docker.sh  start_docker_910B2.sh  start_docker_910B4.sh
markdown/fast_inverse_blog/: fast_inverse.md  fast_inverse_zh.md
markdown/fast_inverse_blog/scripts/: plot_tril_mpl_style.py  plot_triton_gdn_bar.py  plot_vs_tilelang.py  plot_vs_triton.py
markdown/fast_inverse_part1/: fast_inverse.md  fast_inverse_part1.md  fast_inverse_zh.md
profiling/: analysis_tilelang_opt_solve_tril.py  bench_tilelang_full_gdn.py  profile_bsnd_inv_npu.py  profile_gdn_npu.py  profile_tri_inv_npu.py  profile_triton_gdn_npu.py  run_profiling.sh  run_profiling_bsnd_inv.sh  run_profiling_gdn.sh  run_profiling_tri_inv.sh  run_profiling_triton_gdn.sh  utils.py
profiling/data/Qwen3-Next/: beta.pt  g.pt
profiling/data/Qwen3.5-0.8B/: beta.pt  cu_seqlens.pt  g.pt
profiling/nbs/: MatrixInversesBench.ipynb  plots_bsnd_inv.ipynb  plots_gdn_e2e.ipynb  plots_tri_inv.ipynb  tri_inv_numerical_accuracy_comparison.ipynb
pto-isa-tri-inv/: .gitignore  CMakeLists.txt  Makefile  requirements.txt  run.sh  setup.py
pto-isa-tri-inv/csrc/host/: my_add.cpp  torch_abs.cpp  torch_batch_matrix_square.cpp  torch_simple_matmul.cpp  torch_tri_inv.cpp  torch_tri_inv_trick.cpp  utils.h
pto-isa-tri-inv/csrc/kernel/: add_custom.cpp  kernel_abs.cpp  kernel_simple_matmul.cpp  kernel_tri_inv_col_sweep.cpp
pto-isa-tri-inv/op_extension/: _load.py
pto-isa-tri-inv/pto_isa_kernels/: _load.py
pto-isa-tri-inv/test/: test.py
pto-isa-tri-inv/tests/: test_abs.py  test_add_custom.py  test_batch_matrix_square.py  test_simple_matmul.py  test_tri_inv_col_sweep.py  test_tri_inv_trick.py
src/gdn-tri-inverse/: core.py  utils.py
src/gdn_tri_inverse/: core.py  linalg.py
src/gdn_tri_inverse/tilelang_chunk_gdn/: README.md  __init__.py  opt_gdn_chunk_cumsum.py  opt_gdn_chunk_h.py  opt_gdn_chunk_o.py  opt_gdn_chunk_scaled_dot_kkt.py  opt_gdn_full.py  opt_gdn_solve_tril.py  opt_gdn_wy_fast.py
src/gdn_tri_inverse/triton_chunk_gdn/: README.md
src/gdn_tri_inverse/triton_chunk_gdn/fla/: chunk.py
tests/: conftest.py  test_gdn_torch_ref.py  test_linalg.py
tests/sgl_kernels_npu/: test_fast_inv_tril.py
tests/tilelang_opt_gdn/: test_opt_gdn_chunk_cumsum.py  test_opt_gdn_chunk_h.py  test_opt_gdn_chunk_o.py  test_opt_gdn_chunk_scaled_dot_kkt.py  test_opt_gdn_full.py  test_opt_gdn_solve_tril.py  test_opt_gdn_wy_fast.py
