[project]
name = "gdn-tri-inverse"
version = "0.1.0"
description = ""
authors = [
    {name = "\"GDN Triangular Inverse Team - Huawei VNRC\""}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy==1.26.4",
  "scipy==1.13.1",
  "decorator==5.1.1",
  "psutil==6.1.0",
  "PyYAML==6.0.2",
  "attrs==24.2.0",
  "einops==0.8.1",
  "torch-npu==2.8.0.post2",
  "pandas==2.3.3",
  "seaborn==0.13.2",
  "matplotlib==3.10.8",
  "tcuscan @ file:///scratch/TCUSCAN/tcuscan-0.1.0-cp310-cp310-linux_x86_64.whl",
  "pto_kernels @ git+ssh://git@ssh.gitlab.huaweirc.ch/zrc-von-neumann-lab/tcuscan/pto-kernels.git",
  "sgl-kernel-npu @ file:///scratch/TCUSCAN/sgl_kernel_npu-2026.2.1-cp310-cp310-linux_x86_64.whl",
  "triton-ascend==3.2.0"
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
